--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @recipes.sort_by{|recipe| recipe.created_at}.reverse!.each do |recipe| %>
     <tr>
-        <td><%= recipe.name %></td>
+        <td><%= link_to recipe.name, recipe_url(recipe.id) %></td>
         <td><%= recipe.description %></td>
     </tr>
     
