--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Recipes#show</h1>
-<p>Find me in app/views/recipes/show.html.erb</p>
+<h1><%= @recipe.name %></h1>
+<p><%= @recipe.instructions %></p>
+
+<h3>Images of the Dish</h3>
+
+<h3>Restaurants that Specialize</h3>
+
+<h4>Comments</h4>
