--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
         </form>
 <% end %>
 <% @user.recipes.each do |recipe| %>
-    <h2><%= recipe.name %></h2>
+    <h2><%= link_to recipe.name, recipe_url(recipe.id) %></h2>
     <h4><%= recipe.description %></h4>
     <p><%= recipe.instructions %></p>
 <% end %>
