--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,4 @@
-<h4>Check Out Your Page. <%= link_to "User Profile", user_url(current_user.id)%> </h4>
-<h1>Welcome! Lets share some food ideas!</h1>
+<h1>Welcome! Did you eat yet?</h1>
 
 <h3>List of Recipes</h3>
 <table>
