--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Recipes#new</h1>
-<p>Find me in app/views/recipes/new.html.erb</p>
+<h3>Add a New Recipe</h3>
+<%= simple_form_for @recipe do |f| %>
+<div class='panel-body'>
+
+    <%= f.input :name, input_html: {class: 'form-control'}%>
+    <%= f.input :description, input_html: {class: 'form-control'}%>
+    <%= f.file_field :image, input_html: {class: 'form-control'}%>
+    <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id} %>
+    <%= f.button :submit, class: "btn btn-primary"%>
+</div>
+
+<% end %>    
+    
