--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,16 @@
 <body>
   
 <% if current_user %>
-  <nav class="navbar navbar-default"  role="navigation">
-    
+  <nav class="navbar navbar-default">
+    <ul class ="nav navbar-nav navbar-left">
+      <li><%= link_to "Foodie", recipes_url %></li>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Home", recipes_url %></li>
+      <li><%= link_to "New Recipe", new_recipe_url %></li>
       <li><%= link_to "Profile", user_url(current_user.id) %></li>
       <li><%= link_to "Sigh Out", destroy_sessions_url(current_user.id), method: :delete %></li>
     </ul>
+    </div>
   </nav>
 <% end %>
 
