--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,17 +1,19 @@
 <h1>Welcome! Did you eat yet?</h1>
 
 <h3>List of Recipes</h3>
-<table>
-    <tr>
-        <th>Name of Dish</th>
-        <th>Description</th>
-    </tr>
 
-<% @recipes.sort_by{|recipe| recipe.created_at}.reverse!.each do |recipe| %>
-    <tr>
-        <td><%= link_to recipe.name, recipe_url(recipe.id) %></td>
-        <td><%= recipe.description %></td>
-    </tr>
-    
+
+<% @recipe.sort_by{|recipe| recipe.created_at}.reverse!.each_slice(3) do |recipes| %>
+    <div class='row'>
+        <% recipes.each do |recipe| %>
+        <div class='col-md-4'>
+            <div class ='recipe'>
+                <div class='image_wrapper'>
+                    <%= image_tag(recipe.image)%>
+                </div>
+                <h2> <%= link_to recipe.name, recipe_url(recipe.id) %> </h2>
+             </div>
+         </div>
+        <% end %> 
+    </div>
 <% end %>
-</table>
