--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,13 +1,34 @@
 <h3>Add a New Recipe</h3>
 <%= simple_form_for @recipe do |f| %>
 <div class='panel-body'>
-
     <%= f.input :name, input_html: {class: 'form-control'}%>
     <%= f.input :description, input_html: {class: 'form-control'}%>
     <%= f.file_field :image, input_html: {class: 'form-control'}%>
     <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id} %>
+    
+    <div class ='row'>
+        <div class='col-md-6'>
+            <h3>Ingredients</h3>
+            <%= f.simple_fields_for :ingredients do |ingredient| %>
+                <%= render 'ingredients_fields', f:ingredient %>
+            <% end %>
+            <div class='links' >
+                <%= link_to_add_association 'Add Ingredient', f,:ingredients, class: "btn btn-default add-button" %>
+            </div>
+        </div>
+        <div class ='col-md-6'>
+            <h3>Directions</h3>
+            <%= f.simple_fields_for :directions do |direction| %>
+                <%= render 'directions_fields', f:direction %>
+            <% end %>
+            <div class ='links'>
+                <%= link_to_add_association 'Add Direction', f,:directions, class: "btn btn-default add-button" %>
+            </div>
+        </div>
     <%= f.button :submit, class: "btn btn-primary"%>
+    </div>
 </div>
+
 
 <% end %>    
     
