--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -9,10 +9,11 @@
         <div class='col-md-4'>
             <div class ='recipe'>
                 <div class='image_wrapper'>
-                    <%= image_tag(recipe.image)%>
+                    <%= link_to image_tag(recipe.image), recipe_url(recipe.id) %>
                 </div>
-                <h2> <%= link_to recipe.name, recipe_url(recipe.id) %> </h2>
-             </div>
+                <h2><%= link_to recipe.name, recipe_url(recipe.id) %></h2> 
+                <p> <%= recipe.user_likes.count %> likes</p>
+              
          </div>
         <% end %> 
     </div>
