--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -33,6 +33,18 @@
             </div>
         </div>
     </div>
+    <div class ='row'>
+        <div class ='col-md-6'>
+        <div id='ingredients'>
+            <h2>Restaurants that Specialize</h2>
+            <% @recipe.restaurants.each do |restaurant| %>
+                <h3><%= restaurant.name %></h3>
+                <p><%= restaurant.city %></p>
+                <p></p><%= restaurant.state %></p>        
+            <% end %>
+        </div>
+        </div>
+    </div>
 </div>
 <h4>Comments</h4>
 <% @recipe.comments.each do |comment| %>
