--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
 <% end %>
         
 <% @user.recipes.each do |recipe| %>
-    <%= link_to image_tag(recipe.image.url(:medium)), recipe_url %>
-    <
+    <h2><%= recipe.name %></h2>
+    <%= link_to image_tag(recipe.image.url(:medium)), recipe_url(recipe.id) %>
     <p><%= recipe.user_likes.count %> people like this recipe</p>
     
     <% if recipe.user_likes.include?(current_user) %>
@@ -16,12 +16,14 @@
             <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
             <input type='hidden' name='_method' value='delete'>
             <input type='submit' value='Unlike'>
+            <br />
     <% else %>
     
         <form action='/likes' method='post'>
             <input type ='hidden' name='authenticity_token' value= '<%= form_authenticity_token %>'>
             <input type='hidden' name='recipe_id' value=<%= recipe.id %>>
             <input type='submit' value='Like'>
+            <br />
         </form>
     <% end %>
 <% end %>
